MakeSpaceFYV/kubernetes/msfyv-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msfyv-frontend-deployment
spec:
  selector:
    matchLabels:
      app: msfyv-frontend
  template:
    metadata:
      labels:
        app: msfyv-frontend
    spec:
      containers:
      - name: msfyv-frontend
        image: tusharsnagpal/make-space-for-your-vehicle-frontend-web
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: msfyv-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: msfyv-frontend
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    nodePort: 30000
